# Flask_university

./: .env  .env.test  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  requirements.txt  setup.cfg
app/: app.py  cofigs.py  configs.py  init_routers.py  logger.py
app/api/: routers.py
app/api/university/: models.py  routers.py
app/api/university/api_models/: base.py  course.py  group.py  student.py
app/api/university/endpoints/: course.py  group.py  student.py
app/cli/: __main__.py
app/crud/: sql.py  students.py  university.py
app/crud/university/: course.py  group.py  student.py  utils.py
app/db/: session.py  transaction.py  utils.py
app/db/load_db/: data_for_generation.py  data_generation.py
app/db/models/: __init__.py  course.py  group.py  student.py  student_course_association.py  student_group_association.py
migrations/: env.py  script.py.mako
tests/: __init__.py  conftest.py  data_for_test_db.py  test_api.py  сonftest.py
tests/test_api/: test_course_endpoints.py  test_group_endpoints.py  test_student_endpoints.py
